# intropy

./: .gitattributes  .markdownlint.yaml  .markdownlintignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  Makefile  Pipfile  README.md  TODO.md  cookiecutter.json  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yaml  publish-pypi.yaml
docs/: Makefile  conf.py  index.rst
docs/api/: intropy.cli.rst  intropy.rst  modules.rst
hooks/: post_gen_project.py
intropy/: __init__.py  cli.py
pyinit/: cli.py
requirements/: requirements-dev.txt  requirements-docs.txt  requirements-style.txt
tests/: test_cli.py  test_cookiecutter.py  test_generated_project_test_suite.py
{{ cookiecutter.project_slug }}/: README.md  pyproject.toml  setup.py  tox.ini
{{cookiecutter.project_slug}}/: .editorconfig  .pre-commit-config.yaml  LICENSE  Makefile  Pipfile  README.md  pyproject.toml  requirements-dev.txt  setup.py  tox.ini  trivy.yaml
{{cookiecutter.project_slug}}/.azure-pipelines/: ci.yaml
{{cookiecutter.project_slug}}/.azuredevops/: ci.yaml
{{cookiecutter.project_slug}}/.github/: PULL_REQUEST_TEMPLATE.md
{{cookiecutter.project_slug}}/.github/ISSUE_TEMPLATE/: bug_report.md
{{cookiecutter.project_slug}}/.github/workflows/: ci.yaml  publish-pypi.yaml
{{cookiecutter.project_slug}}/docs/: Makefile  conf.py  index.rst
{{cookiecutter.project_slug}}/requirements/: requirements-dev.txt  requirements-docs.txt  requirements-style.txt
{{cookiecutter.project_slug}}/tests/: test_cli.py  test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  cli.py  main.py
