[project]
name = "intropy"
description = "Jump-start your python project"
readme = "README.md"
dynamic = ["version"]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = ["cookiecutter"]

[project.optional-dependencies]
dev = [
    "build",
    "bump-my-version",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-cookies",
    "pytest-cov",
    "ruff",
]
style = ["ruff"]
docs = ["myst-parser", "sphinx", "sphinx-autobuild", "sphinx-rtd-theme"]

[project.scripts]
intropy = "intropy.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "intropy.__version__" }

[tool.setuptools.packages.find]
include = ["intropy"]
exclude = ["{{cookiecutter.project_slug}}*", "tests*", "hooks*"]

[tool.pytest.ini_options]
pythonpath = ["."]
required_plugins = ["pytest-cov", "pytest-cookies"]
addopts = [
    "--strict-config",
    "--ignore=setup.py",
    "--ignore={{cookiecutter.project_slug}}",
    "--cov=intropy",
    "--cov-config=pyproject.toml",
    "--cov-append",
    "--cov-report=term-missing",
]

[tool.isort]
profile = "black"

[tool.ruff]
extend-exclude = ['*cookiecutter.project_slug**', "hooks/"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "C",      # flake8-comprehensions
    "B",      # flake8-bugbear
    "TID",    # flake8-tidy-import
    "TCH",    # flake8-type-checking TYPE_CHECKING blocks
    "ISC",    # flake8-implicit-str-concat
    "LOG",    # flake8-logging
    "SIM",    # flake8-simplify
    "RUF100", # Unused noqa (auto-fixable)
]
ignore = [
    "E501",   # line too long, handled by black
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "ISC001", # can cause conflict with formatter
]

[tool.ruff.format]
# Enable reformatting of code snippets in docstrings.
docstring-code-format = true
indent-style = "space"
# Use `\n` line endings for all files
line-ending = "lf"

[tool.ruff.lint.flake8-tidy-imports]
# Disallow all relative imports.
ban-relative-imports = "all"

[tool.coverage.run]
branch = true
source = ["intropy"]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",

    # Dont complain typing
    "@(typing(_extensions)?\\.)?overload",
    "if (typing(_extensions)?\\.)?TYPE_CHECKING:",
]

[tool.bumpversion]
current_version = "0.6.2"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} -> {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} -> {new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = "intropy/__init__.py"

[tool.mypy]
files = ["intropy/**/*.py", "tests/**/*.py"]
exclude = ["\\{\\{cookiecutter.project_slug\\}\\}*", "hooks*"]

[[tool.mypy.overrides]]
module = "cookiecutter.main"
ignore_missing_imports = true
