[project]
name = "{{ cookiecutter.project_slug.replace('_', '-') }}"
description = "{{ cookiecutter.project_short_description }}"
authors = [{ name = "{{ cookiecutter.full_name }}" }]
readme = "README.md"
{% if cookiecutter.project_type == 'Application' -%}
dynamic = ["version", "dependencies", "optional-dependencies"]
{%- elif cookiecutter.project_type == 'Library' -%}
dynamic = ["version"]
dependencies = []
{%- endif -%}
{%- if cookiecutter.open_source_license == 'MIT' %}
license = { file = "LICENSE" }
{%- endif %}
classifiers = [
    "Programming Language :: Python :: 3",
{%- if cookiecutter.open_source_license == 'MIT' %}
    "License :: OSI Approved :: MIT License",
{%- elif cookiecutter.open_source_license == 'Not open source' %}
    "Private :: Do Not Upload",
{%- endif %}
]

{% if cookiecutter.is_cli_tool -%}
[project.scripts]
{{ cookiecutter.project_slug.lower().replace('_', '-') }} = "{{ cookiecutter.project_slug }}.cli:main"
{%- endif %}

{% if cookiecutter.project_type == 'Library' -%}
[project.optional-dependencies]
dev = [
    "build",
    "bump-my-version",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
    "twine",
    {%- if cookiecutter.code_formatter == 'Black' %}
    "black",
    {%- endif %}
]
style = [
    "ruff",
    {%- if cookiecutter.code_formatter == 'Black' %}
    "black",
    {%- endif %}
]
docs = ["myst-parser", "sphinx", "sphinx-autobuild", "sphinx-rtd-theme"]

{% endif -%}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
{% if cookiecutter.project_type == 'Application' -%}
dependencies = { file = ["requirements/requirements.txt"] }
optional-dependencies = { dev = { file = [
    "requirements/requirements-dev.txt",
] }, docs = { file = [
    "requirements/requirements-docs.txt",
] }, style = { file = [
    "requirements/requirements-style.txt",
] } }
{%- endif %}
version = { attr = "{{ cookiecutter.project_slug }}.__version__" }

[tool.setuptools.packages.find]
include = ["{{ cookiecutter.project_slug }}*"]
exclude = ["data*", "tests*"]

[tool.setuptools.package-data]
{{ cookiecutter.project_slug }} = ["*.json", "*.yaml", "*.yml", "*.txt"]

[tool.pytest.ini_options]
pythonpath = ["."]
required_plugins = ["pytest-cov"]
addopts = [
    "--strict-config",
    "--ignore=setup.py",
    "--cov={{ cookiecutter.project_slug }}",
    "--cov-config=pyproject.toml",
    "--cov-append",
    "--cov-report=term-missing",
]

[tool.isort]
profile = "black"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "C",      # flake8-comprehensions
    "B",      # flake8-bugbear
    "TID",    # flake8-tidy-import
    "TCH",    # flake8-type-checking TYPE_CHECKING blocks
    "ISC",    # flake8-implicit-str-concat
    "LOG",    # flake8-logging
    "SIM",    # flake8-simplify
    "RUF100", # Unused noqa (auto-fixable)
]
ignore = [
    "E501",   # line too long, handled by black
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "ISC001", # can cause conflict with formatter
]

[tool.ruff.format]
# Enable reformatting of code snippets in docstrings.
docstring-code-format = true
indent-style = "space"
# Use `\n` line endings for all files
line-ending = "lf"

[tool.ruff.lint.flake8-tidy-imports]
# Disallow all relative imports.
ban-relative-imports = "all"

[tool.coverage.run]
branch = true
source = ["{{ cookiecutter.project_slug }}"]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",

    # Dont complain typing
    "@(typing(_extensions)?\\.)?overload",
    "if (typing(_extensions)?\\.)?TYPE_CHECKING:",
]

[tool.bumpversion]
current_version = "{{ cookiecutter.version }}"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} -> {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} -> {new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = "{{ cookiecutter.project_slug }}/__init__.py"

[tool.mypy]
files = ["{{ cookiecutter.project_slug }}/**/*.py", "tests/**/*.py"]
